Fixed label's alignment

--- a/src/common/ThemeSwitch/ThemeSwitch.module.scss
+++ b/src/common/ThemeSwitch/ThemeSwitch.module.scss
@@ -3,3 +3,9 @@
     align-items: center;
     justify-content: center;
 }
+
+.SwitchLabel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
